# netease-cloud-music-api

./: Cargo.toml  README.md
src/: encrypt.rs  lib.rs  model.rs
