[package]
name = "netease-cloud-music-api"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "^1", features = ["cookies"] }
lazy_static = "*"
regex = "*"
urlqstring = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
openssl = "*"
anyhow = "*"
hex = "*"
base64 = "*"

[dev-dependencies]
async-std = { features = ["attributes"], version = "*" }
